<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大同OA II</string>
    <string name="title_activity_cell_identify">验证手机号</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_change_pswd">ChangePswdActivity</string>
    <string name="title_activity_create_org">CreateOrgActivity</string>
    <string name="title_activity_dept">DeptActivity</string>

    <string name="nav_title_add">添加</string>
    <string name="nav_title_user_profile">详细资料</string>
    <string name="nav_title_create_dept">创建部门</string>
    <string name="nav_title_create_group">创建群</string>
    <string name="nav_title_create_org">创建组织</string>
    <string name="nav_title_org">组织架构</string>
    <string name="nav_title_forget_pswd">忘记密码</string>
    <string name="nav_title_add_user">添加人员</string>
    <string name="nav_title_group_detail">群详情</string>
    <string name="nav_title_manage_dept">管理部门</string>
    <string name="nav_title_manage_org">管理组织</string>
    <string name="nav_title_my_friend">我的好友</string>
    <string name="nav_title_my_groups">我的群组</string>
    <string name="nav_title_my_profile">我的资料</string>
    <string name="nav_title_mu_qrcode">我的二维码</string>
    <string name="nav_title_phone_contacts">手机电话簿</string>
    <string name="nav_title_scan_bar_code">扫描二维码</string>
    <string name="nav_title_register">注册</string>
    <string name="nav_title_select_dept">选择部门</string>
    <string name="nav_title_select_user">选择联系人</string>
    <string name="nav_title_picute">图片详情</string>
    <string name="nav_title_contact">联系人</string>
    <string name="nav_title_app">应用</string>
    <string name="nav_title_todo">待办任务</string>

    <string name="nav_button_add">添加</string>
    <string name="nav_btn_create">创建</string>

    <string name="label_username">用户名</string>
    <string name="label_cell">手机号码</string>
    <string name="label_dept">部门</string>
    <string name="label_change_pswd">更改密码</string>
    <string name="label_cell_identify">验证手机号</string>
    <string name="label_press_to_speak">按住说话</string>
    <string name="label_capture">拍照</string>
    <string name="label_photo">照片</string>
    <string name="label_slide_up_to_cancel">手指上滑，取消发送</string>
    <string name="label_select_parent_dept">请选择父部门</string>
    <string name="label_select_group_member">请选择群聊人员</string>
    <string name="label_group_app">群应用</string>
    <string name="label_group_icon">群图标</string>
    <string name="label_group_name">群名称</string>
    <string name="label_group_member">群成员</string>
    <string name="label_password"> 密  码</string>
    <string name="label_dept_name">部门名称</string>
    <string name="label_org_name">组织名称</string>
    <string name="label_manage_dept">管理部门和成员</string>
    <string name="label_scan_hint">将二维码放入框内扫描</string>
    <string name="label_search">搜索</string>
    <string name="label_male">男</string>
    <string name="label_female">女</string>
    <string name="label_loading">正在加载</string>
    <string name="label_contact">联系人</string>
    <string name="label_press_again_to_quit">再按就要退出了哟~</string>
    <string name="label_added">已添加</string>
    <string name="label_wait_accept">等待对方接受</string>
    <string name="label_not_cell">非手机号</string>
    <string name="label_invited">已邀请</string>
    <string name="label_modify_name">更改姓名</string>
    <string name="label_modify_sex">更改性别</string>
    <string name="label_modify_birthday">更改生日</string>
    <string name="label_head">头像</string>
    <string name="label_bar_code">二维码名片</string>
    <string name="label_sex">性别</string>
    <string name="label_birthday">生日</string>
    <string name="label_org">组织架构</string>
    <string name="label_my_friends">我的好友</string>
    <string name="label_phone_contact">手机通讯录</string>
    <string name="label_my_groups">我的群聊</string>
    <string name="label_picture">[图片]</string>
    <string name="label_voice">[语音]</string>

    <string name="btn_add">添加</string>
    <string name="btn_get_verify_code">获取验证码</string>
    <string name="btn_next">下一步</string>
    <string name="btn_submit">提交</string>
    <string name="btn_send">发送</string>
    <string name="btn_chat">发消息</string>
    <string name="btn_delete_friend">删除好友</string>
    <string name="btn_add_user">添加员工</string>
    <string name="btn_add_dept">添加子部门</string>
    <string name="btn_manage_dept">管理部门</string>
    <string name="btn_quit_group">退出该群</string>
    <string name="btn_login">登录</string>
    <string name="btn_cannot_login">无法登录？</string>
    <string name="btn_login_register">新用户注册</string>
    <string name="btn_delete_dept">删除部门</string>
    <string name="btn_delete_org">删除组织</string>
    <string name="btn_delete_user">删除员工</string>
    <string name="btn_switch_user_login">切换账户登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_capture">拍照</string>
    <string name="btn_select_from_photo">从手机相册选择</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_create_group">创建群组</string>
    <string name="btn_create_org">创建组织</string>
    <string name="btn_add_friend">添加好友</string>
    <string name="btn_scan">扫一扫</string>
    <string name="btn_my_profile">我的资料</string>
    <string name="btn_help_n_feedback">帮助与反馈</string>
    <string name="btn_about">关于</string>
    <string name="btn_get_verify_code_again_prefix">再获取(</string>
    <string name="btn_get_verify_code_again_suffix">）</string>
    <string name="btn_delete">删除</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_dismiss">解散</string>
    <string name="btn_quit">退出</string>
    <string name="btn_remove">移除</string>
    <string name="btn_dismiss_group">解散该群</string>
    <string name="btn_modify">更改</string>
    <string name="btn_accept">接受</string>
    <string name="btn_manage">管理</string>
    <string name="btn_invite">邀请</string>

    <string name="tab_todo">待办</string>
    <string name="tab_notification_center">通知中心</string>
    <string name="tab_task">应用</string>
    <string name="tab_contact">联系人</string>

    <string name="hint_required">必填</string>
    <string name="hint_input_cell">请输入手机号</string>
    <string name="hint_input_verify_code">请输入验证码</string>
    <string name="hint_input_pswd">请输入密码</string>
    <string name="hint_input_rpt_pswd">请重复密码</string>
    <string name="hint_input_dept_name">请输入部门名称</string>
    <string name="hint_input_group_name">请输入群聊名称（选填）</string>
    <string name="hint_input_org_name">请输入组织名称</string>
    <string name="hint_input_username">请输入用户名</string>

</resources>
