<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="126dp"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/bg_pop_r" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:background="#eeeeee"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAddGroup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:padding="12dp"
            android:text="@string/btn_create_group"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvCreateOrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:padding="12dp"
            android:text="@string/btn_create_org"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvAddFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:padding="12dp"
            android:text="@string/btn_add_friend"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:padding="12dp"
            android:text="@string/btn_scan"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>