<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_3">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/image_btn"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgViewBackBtn"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/back"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/nav_title_create_dept"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/nav_btn_create"
            android:textColor="@drawable/button_text_color"
            android:textSize="16sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/layoutTitle"
        android:layout_marginTop="20dp"
        android:background="@color/white_transparent_1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/transparent"
            android:hint="@string/hint_input_dept_name" />

        <RelativeLayout
            android:id="@+id/layoutSelect"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivArrow"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:padding="10dp"
                android:src="@drawable/arrow" />

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:text="@string/label_select_parent_dept"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ivArrow"
                android:layout_toRightOf="@id/tvLabel"
                android:gravity="right"
                android:maxLines="1"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textColor="@color/gray_2"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
