<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/image_btn"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgViewBackBtn"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/nav_title_forget_pswd"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutVerify"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/layoutTitle"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/layoutFocus"
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/editCell"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hint_input_cell"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/gray_1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnNext"
                android:layout_width="0dip"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/button_normal"
                android:text="@string/btn_next"
                android:textColor="@drawable/button_text_color"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>