<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_3"
    tools:ignore="ContentDescription,RtlHardcoded">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:background="@drawable/image_btn"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgViewBackBtn"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="fitCenter"
                android:src="@drawable/back" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/button"
            android:text="@string/nav_button_add"
            android:textColor="@drawable/button_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btnAdd"
            android:layout_toRightOf="@id/btnBack"
            android:gravity="center_horizontal"
            android:text="@string/nav_title_add_user"
            android:textColor="@color/green"
            android:textSize="20sp" />


        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_2" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTitle"
        android:layout_marginTop="20dp"
        android:background="@color/white_transparent_1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_2" />

        <RelativeLayout
            android:id="@+id/btnName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/lName"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/label_username"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ibSelect"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:src="@drawable/ic_contact_p" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toLeftOf="@id/ibSelect"
                android:layout_toRightOf="@id/lName"
                android:background="@color/transparent"
                android:hint="@string/hint_required"
                android:maxLines="1"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="80dp"
            android:background="@color/gray_2" />

        <RelativeLayout
            android:id="@+id/btnCell"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/lCell"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/label_cell"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etCell"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/lCell"
                android:background="@color/transparent"
                android:hint="@string/label_cell"
                android:maxLines="1"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_2" />

        <RelativeLayout
            android:id="@+id/btnDept"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivArrow2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/arrow"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/ltv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:text="@string/label_dept"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/ivArrow2"
                android:layout_toRightOf="@id/ltv"
                android:gravity="right"
                android:text="@string/label_dept"
                android:textColor="@color/gray_2"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_2" />

    </LinearLayout>

</RelativeLayout>
